# obsidian-typst

./: manifest.json  package-lock.json
compiler/: Cargo.toml
compiler/src/: diagnostic.rs  file_entry.rs  lib.rs  render.rs  world.rs
src/: compiler.worker.ts
