[package]
name = "obsidian-typst"
version = "0.10.0"
authors = ["fenjalien"]
edition = "2021"
description = "Renders `typst` code blocks to images with Typst."
readme = "README.md"
rust-version = "1.72.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Everything to do with Typst
typst = "0.14"
typst-render = "0.14"
typst-svg = "0.14"
typst-assets = {version = "0.14", features = ["fonts"]}
comemo = "0.5"


# Everything to do with wasm
wasm-bindgen = "^0.2"
js-sys = "^0.3"
wasm-bindgen-futures = "^0.4"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "^0.6"
web-sys = { version = "^0.3", features = [
    "console",
    "Window",
    "FontData",
    "Blob",
    "ImageData",
] }
console_error_panic_hook = "0.1.7"

# Image handling
fast_image_resize = "5.3.0"

ariadne = "0.6.0"
chrono = "0.4.42"
parking_lot = "0.12.5"
send_wrapper = "0.6.0"
